-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.9.1
-
None
-
KDE on linux
I'm using a QtWebEngine based browser on linux (QupZilla), and when I use an incognito mode, occassionally a "databases-incognito" is created in my users home directory. It doesn't ever seem to get populated with files, but it still seems incorrect to spam the home directory.
| For Gerrit Dashboard: QTBUG-62957 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 213100,1 | Speculative fix for ~/databases-incognito creation in incognito mode | 61-based | qt/qtwebengine-chromium | Status: ABANDONED | -1 | 0 |
| 305361,3 | Return valid path in Profile::GetPath() for incognito profiles | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |