Return valid path in Profile::GetPath() for incognito profiles

Parts of Chromium depends on it for temporary directories it creates.

This also changes the logic of depending on it being empty as indicating
an in memory profile, so it required a bit of cleaning up.

Note this does subtly change the return value of off-the-record profiles.

Task-number: QTBUG-62957
Change-Id: Iec6e24556128c515fce27803171a766b8a9d92e3
Reviewed-by: Michal Klocek <michal.klocek@qt.io>